--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.2.10
+dj-database-url==0.5.0
 Django==3.1
 django-ckeditor==5.9.0
 django-js-asset==1.2.2
@@ -9,3 +10,4 @@ pytz==2020.1
 selenium==3.141.0
 sqlparse==0.3.1
 urllib3==1.25.10
+whitenoise==5.2.0
